[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-learner"
version = "0.0.1"
description = "Learn about GitHub repositories on the command line using local LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Max Woolf", email = "max@minimaxir.com"},
]
dependencies = [
    "click",
    "files-to-prompt",
    "gitpython",
    "pyyaml",
    "rich",
    "llm",
    "llm-mlx",
]

[project.scripts]
gl = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}